--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -11,110 +11,116 @@
 {% endblock %}
 
 {% block content %}
-    <div class="overlay"></div>
-    <div class="container mb-2">
-        <div class="row">
-            <div class="col">
-                <hr>
-                <h2 class="logo-font mb-4">Shopping Bag</h2>
-                <hr>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col">
-                {% if bag_items %}
-                    <div class="d-block d-md-none">
-                        <div class="row">
-                            <div class="col">
-                                {% include "bag/bag-total.html" %}
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col">
-                                {% include "bag/checkout-buttons.html" %}
-                                <p class="text-muted mb-5">A summary of your bag contents is below</p>
-                            </div>
-                        </div>
-                        {% for item in bag_items %}
-                            <div class="row">
-                                <div class="col-12 col-sm-6 mb-2">
-                                    {% include "bag/product-image.html" %}
-                                </div>
-                                <div class="col-12 col-sm-6 mb-2">
-                                    {% include "bag/product-info.html" %}
-                                </div>
-                                <div class="col-12 col-sm-6 order-sm-last">
-                                    <p class="my-0">Price Each: ${{ item.product.price }}</p>
-                                    <p><strong>Subtotal: </strong>${{ item.product.price | calc_subtotal:item.quantity }}</p>
-                                </div>
-                                <div class="col-12 col-sm-6">
-                                    {% include "bag/quantity-form.html" %}
-                                </div>
-                            </div>
-                            <div class="row"><div class="col"><hr></div></div>
-                        {% endfor %}
-                        <div class="btt-button shadow-sm rounded-0 border border-black">
-                            <a class="btt-link d-flex h-100">
-                                <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
-                            </a>	
-                        </div>
+<div class="overlay"></div>
+<div class="hero-image">
+    <div class="section-holder">
+        <div class="form-holder-xlg">   
+            <div class="container mb-2">
+                <div class="row">
+                    <div class="col">
+                        <hr>
+                        <h2 class="logo-font mb-4">Shopping Bag</h2>
+                        <hr>
                     </div>
-                    <div class="table-responsive rounded d-none d-md-block">
-                        <table class="table table-sm table-borderless">
-                            <thead class="text-black">
-                                <tr>
-                                    <th scope="col">Product Info</th>
-                                    <th scope="col"></th>
-                                    <th scope="col">Price</th>
-                                    <th scope="col">Qty</th>
-                                    <th scope="col">Subtotal</th>
-                                </tr>
-                            </thead>
+                </div>
 
-                            {% for item in bag_items %}
-                                <tr>
-                                    <td class="p-3 w-25">
-                                        {% include "bag/product-image.html" %}
-                                    </td>
-                                    <td class="py-3">
-                                        {% include "bag/product-info.html" %}
-                                    </td>
-                                    <td class="py-3">
-                                        <p class="my-0">${{ item.product.price }}</p>
-                                    </td>
-                                    <td class="py-3 w-25">
-                                        {% include "bag/quantity-form.html" %}
-                                    </td>
-                                    <td class="py-3">
-                                        <p class="my-0">${{ item.product.price | calc_subtotal:item.quantity }}</p>
-                                    </td>
-                                </tr>
-                            {% endfor %}
-                            <tr>
-                                <td colspan="5" class="pt-5 text-right">
-                                    {% include "bag/bag-total.html" %}
-                                </td>
-                            </tr>
-                            <tr>
-                                <td colspan="5" class="text-right">
-                                    {% include "bag/checkout-buttons.html" %}
-                                </td>
-                            </tr>
-                        </table>
+                <div class="row">
+                    <div class="col">
+                        {% if bag_items %}
+                            <div class="d-block d-md-none">
+                                <div class="row">
+                                    <div class="col">
+                                        {% include "bag/bag-total.html" %}
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col">
+                                        {% include "bag/checkout-buttons.html" %}
+                                        <p class="text-muted mb-5">A summary of your bag contents is below</p>
+                                    </div>
+                                </div>
+                                {% for item in bag_items %}
+                                    <div class="row">
+                                        <div class="col-12 col-sm-6 mb-2">
+                                            {% include "bag/product-image.html" %}
+                                        </div>
+                                        <div class="col-12 col-sm-6 mb-2">
+                                            {% include "bag/product-info.html" %}
+                                        </div>
+                                        <div class="col-12 col-sm-6 order-sm-last">
+                                            <p class="my-0">Price Each: ${{ item.product.price }}</p>
+                                            <p><strong>Subtotal: </strong>${{ item.product.price | calc_subtotal:item.quantity }}</p>
+                                        </div>
+                                        <div class="col-12 col-sm-6">
+                                            {% include "bag/quantity-form.html" %}
+                                        </div>
+                                    </div>
+                                    <div class="row"><div class="col"><hr></div></div>
+                                {% endfor %}
+                                <div class="btt-button shadow-sm rounded-0 border border-black">
+                                    <a class="btt-link d-flex h-100">
+                                        <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
+                                    </a>	
+                                </div>
+                            </div>
+                            <div class="table-responsive rounded d-none d-md-block">
+                                <table class="table table-sm table-borderless">
+                                    <thead class="text-black">
+                                        <tr>
+                                            <th scope="col">Product Info</th>
+                                            <th scope="col"></th>
+                                            <th scope="col">Price</th>
+                                            <th scope="col">Qty</th>
+                                            <th scope="col">Subtotal</th>
+                                        </tr>
+                                    </thead>
+
+                                    {% for item in bag_items %}
+                                        <tr>
+                                            <td class="p-3 w-25">
+                                                {% include "bag/product-image.html" %}
+                                            </td>
+                                            <td class="py-3">
+                                                {% include "bag/product-info.html" %}
+                                            </td>
+                                            <td class="py-3">
+                                                <p class="my-0">${{ item.product.price }}</p>
+                                            </td>
+                                            <td class="py-3 w-25">
+                                                {% include "bag/quantity-form.html" %}
+                                            </td>
+                                            <td class="py-3">
+                                                <p class="my-0">${{ item.product.price | calc_subtotal:item.quantity }}</p>
+                                            </td>
+                                        </tr>
+                                    {% endfor %}
+                                    <tr>
+                                        <td colspan="5" class="pt-5 text-right">
+                                            {% include "bag/bag-total.html" %}
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td colspan="5" class="text-right">
+                                            {% include "bag/checkout-buttons.html" %}
+                                        </td>
+                                    </tr>
+                                </table>
+                            </div>
+                        {% else %}
+                            <p class="lead mb-5">Your bag is empty.</p>
+                            <!--<a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
+                               <span class="icon">
+                                    <i class="fas fa-chevron-left"></i>
+                                </span> -->
+                                <a href="{% url 'products' %}"class="text-uppercase">Keep Shopping</span>
+                            </a>
+                        {% endif %}
                     </div>
-                {% else %}
-                    <p class="lead mb-5">Your bag is empty.</p>
-                    <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
-                        <span class="icon">
-                            <i class="fas fa-chevron-left"></i>
-                        </span>
-                        <span class="text-uppercase">Keep Shopping</span>
-                    </a>
-                {% endif %}
+                </div>
             </div>
         </div>
     </div>
+</div>
 {% endblock %}
 
 {% block postloadjs %}
